--- a/pizza-oferte.css
+++ b/pizza-oferte.css
@@ -6,11 +6,13 @@ box-sizing : border-box;
 }
 body {
 background-image : url("fundal.png");
+background-attachment: fixed;
 overflow-x : hidden;
 }
-b, strong {
+b {
 color : rgb(192, 6, 6);
 text-shadow : 0 0 3px rgb(136, 4, 4);
+font-weight: bold;
 }
 nav li a {
 text-decoration : none;
