--- a/contact.css
+++ b/contact.css
@@ -79,7 +79,8 @@ text-shadow : 2px 2px 5px rgb(199, 7, 7);
 column-count : 3;
 column-gap : 1.5px;
 position : relative;
-top : 11em;
+top: 9em;
+padding-bottom: 3em;
 font-size : 20px;
 color : white;
 }
@@ -94,5 +95,15 @@ position : relative;
 top : 3em;
 margin-left : auto;
 margin-right : auto;
+}
+footer {
+position: fixed;
+bottom: 0;
+width: 100%;
+text-align: center;
+font-size: larger;
+}
+footer a {
+color: white;
 }
 }
